--- a/header_footer.css
+++ b/header_footer.css
@@ -20,39 +20,118 @@ footer {
     font-family: "Open Sans", sans-serif;
 }
 
-.carte_footer{
-    margin: 0 20px ;
+.carte_footer {
+    margin: 0 20px;
     text-align: left;
     margin-right: 40px;
     margin-top: -200px;
 }
 
-@media (min-width: 900px ) {
+@media (min-width: 900px) {
     header {
         position: fixed;
         z-index: 10;
         width: 100%;
         top: 0;
     }
+
     main {
-        padding-top: 71px;
+        padding-top: 300px;
     }
+
     .nav-bar {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: flex-end;
         align-items: center;
     }
-    #icon {
-        height: 30px;
-        width: auto;
+
+    .deroulant {
+        flex-basis: 16%;
+        text-align: center;
+        text-decoration: none;
     }
-    #icon:hover{
+
+    .sous {
+        display: none;
+        box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
+        background-color: #e9d5f6;
+        position: absolute;
+        width: 220px;
+        z-index: 1000;
+        border-radius: 0 0 8px 8px;
+        overflow: hidden;
+        left: 50%;
+        transform: translateX(-50%);
+        margin-top: 5px;
+        opacity: 0;
+        transition: opacity 0.3s ease, transform 0.2s ease;
+        transform-origin: top center;
+    }
+
+    nav>ul li:hover .sous {
+        display: block;
+        opacity: 1;
+        transform: translateX(-50%) translateY(0);
+    }
+
+    .sous li {
+        float: none;
+        width: 100%;
+        text-align: center;
+        border-bottom: 1px solid rgba(123, 44, 191, 0.1);
+    }
+
+    .sous a {
+        padding: 12px 16px; 
+        border-bottom: none;
+        display: block;
+        color: #3c096c;
+        text-decoration: none;
+        font-weight: 500; 
+        transition: all 0.2s ease;
+    }
+
+    .sous a:hover {
+        border-bottom: none;
+        background-color: #7b2cbf;
+        color: white;
+        padding-left: 20px;
+    }
+
+    .deroulant {
+        flex-basis: 16%;
+        text-align: center;
+        text-decoration: none;
+        position: relative;
+    }
+
+    .deroulant > a::after {
+        content: " ▾";
+        font-size: 0.7em;
+        margin-left: 5px;
+        vertical-align: middle;
+        transition: transform 0.2s ease;
+    }
+
+    .deroulant:hover > a::after {
+        transform: rotate(180deg);
+    }
+
+    #icon {
+        height: 100px;
+        width: auto;
+        transition: .25s;
+    }
+
+    #icon:hover {
         scale: 1.05;
     }
-    .active-page{
+
+    .active-page {
         text-decoration: underline;
     }
+
     .list {
         height: 100px;
         display: flex;
@@ -60,40 +139,48 @@ footer {
         list-style: none;
         flex: 1;
         align-items: center;
+        justify-content: flex-end;
     }
+
     .elem-list {
         flex-basis: 16%;
         text-align: center;
         text-decoration: none;
     }
+
     .links {
         text-decoration: none;
         color: #3c096c;
         font-weight: bold;
         transition: color 0.25s;
     }
-    .links:hover{
-        color:#7b2cbf; 
+
+    .links:hover {
+        color: #7b2cbf;
         font-size: 110%;
     }
-    .infos{
+
+    .infos {
         display: flex;
         flex-wrap: wrap;
-        justify-content: center ;
+        justify-content: center;
         list-style: none;
         padding: 10px;
     }
-    .elem_infos{
+
+    .elem_infos {
         margin-left: 80px;
         margin-right: 80px;
         color: #005386;
-        display : inline;
+        display: inline;
     }
-    .elem_infos img{
+
+    .elem_infos img {
         margin-top: 10px;
         height: 50px;
     }
-    .creation_page{
+
+    .creation_page {
         color: #005386;
         display: flex;
         justify-content: space-around;
@@ -101,67 +188,80 @@ footer {
     }
 }
 
-@media (max-width: 899px ) {
+@media (max-width: 899px) {
     header {
         position: fixed;
         z-index: 10;
         width: 100%;
         top: 0;
     }
+
     main {
         padding-top: 216px;
     }
+
     .nav-bar {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
         align-items: center;
     }
+
     #icon {
-        height: 30px;
+        height: 100px;
         width: auto;
     }
+
     .list {
         list-style: none;
     }
+
     .elem-list {
         flex-basis: 20%;
         text-align: center;
         margin: 5px;
     }
+
     .elem-list:hover {
         transform: scale(1.175);
     }
+
     .links {
         text-decoration: none;
         color: #3c096c;
         font-weight: bold;
         transition: color 0.25s;
     }
-    .links:hover{
-        color:#7b2cbf; 
+
+    .links:hover {
+        color: #7b2cbf;
     }
-    .active-page{
+
+    .active-page {
         text-decoration: underline;
     }
-    .infos{
+
+    .infos {
         list-style: none;
         justify-content: space-between;
         padding: 0px;
     }
-    .elem_infos{
+
+    .elem_infos {
         color: #005386;
         align-items: center;
         margin: 20px;
     }
-    .elem_infos img{
+
+    .elem_infos img {
         margin-top: 10px;
         height: 50px;
     }
-    .creation_page{
+
+    .creation_page {
         color: #005386;
         display: flex;
         justify-content: space-around;
         margin-top: 15px;
     }
-}   
+}
