--- a/header_footer.css
+++ b/header_footer.css
@@ -5,7 +5,7 @@
 }
 
 header {
-    background-color: #dec0f1;
+    background-color: #d9c0e9;
     padding: 15px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     font-family: "Open Sans", sans-serif;
