--- a/index.css
+++ b/index.css
@@ -1,3 +1,22 @@
+body {
+    background-size: cover;
+    background: linear-gradient(-45deg, #ffb7e7, #db9cff, #a8d8ff, #c9bdff);
+    background-size: 400% 400%;
+    animation: gradientShift 20s ease infinite;
+}
+
+@keyframes gradientShift {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
 .presentation {
     height: 300px;
     display: flex;
@@ -14,4 +33,45 @@
 .prenom {
     font-size: 200px;
     color:#7b2cbf;
+}
+
+.content {
+    display: flex;
+    height: 500px;
+    box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.2);
+    width: 90%;
+    margin: 0 auto;
+}
+
+.content img {
+    width: 50%;
+    background-color: #ffffff;
+}
+
+.content-text {
+    padding: 2em;
+    flex: 1;
+    background-color: #e0c1f5;
+    color: black;
+    width: 40%; 
+    text-align: justify;
+    line-height: 30px;
+    font-family: "Open Sans", sans-serif;
+}
+
+.content-text h2 {
+    font-family: "Work Sans", sans-serif;
+}
+
+.content-text p {
+    font-family: "Work Sans", sans-serif;
+}
+
+.content.content:nth-child(even) {
+    flex-direction: row-reverse;
+}
+
+.margin_page {
+    padding-top: 50px;
+    width: 100%;
 }
