--- a/projetsuniv.css
+++ b/projetsuniv.css
@@ -2,31 +2,46 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0;
+    background: linear-gradient(-45deg, #ffb7e7, #db9cff, #a8d8ff, #c9bdff);
+    background-size: 400% 400%;
+    animation: gradientShift 20s ease infinite;
 }
 
-.first {
-    position: relative;
-    height: 400px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-size: 1578px 500px;
+@keyframes gradientShift {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 .first-text {
-    position: absolute;
-    text-align: center;
-    color: black;
-    background-color: rgba(184, 157, 184, 0.6);
-    padding: 4em;
-    margin-left: 200px;
-    margin-right: 200px;
+    height: 30vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
     font-family: "Work Sans", sans-serif;
 }
 
-.first-text h1 {
-    font-weight: bold;
+.titre-first {
+    font-weight: bolder;
+    font-size: 60px;
+    width: 6em;
+    justify-content: center;
+    text-align: center;
+    padding-bottom: 50px;
+}
+
+.sous-titre-first {
+    font-size: 40px;
+    color:#7b2cbf;
+    text-align: center;
+
 }
 
 .content {
@@ -40,7 +55,7 @@ body {
 
 .content img {
     width: 50%;
-    background-color: #ffffff;
+    background-color: #fff;
 }
 
 .content-text {
@@ -56,19 +71,32 @@ body {
 
 .content-text h2 {
     font-family: "Work Sans", sans-serif;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 10px;
 }
 
 .content-text p {
     font-family: "Work Sans", sans-serif;
+    font-size: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
-.content:nth-child(2n) {
-    flex-direction: row;
+.content-text a {
+    font-size: 20px;
+    color: #7019bd;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .margin_page {
     padding-top: 40px;
     width: 100%;
+}
+
+.content:nth-child(2n) {
+    flex-direction: row-reverse;
 }
 
 @media (max-width: 799px) {
@@ -82,4 +110,11 @@ body {
 .content-text {
     padding: 1em;
     flex: 1;
+}
+.content:nth-child(even) {
+    flex-direction: row-reverse;
+}
+
+#sae34 {
+    background-color: #3d3d3d;
 }
